Added Sparse User manager, no tests at the moment